# queue-manager

./: .gitignore  DataProvider.py  README.md  app.py  debug_run.py  flaskserver.py  new_job.html  passenger_wsgi.py  pyproject.toml  queue.html  queue.py  requirements.txt  starter-template.css  userdb.json  users.py  wsgi.py
.github/workflows/: pyformat.yml
blueprints/: root.py
blueprints/edit/: edit.py
blueprints/edit/templates/: edit.html
blueprints/new/: new.py
blueprints/new/templates/: gcode.html
blueprints/recent/: recent.py
blueprints/recent/templates/: recent.html
db/: user.json
helpers/: alexandria.py
model/: datastore.py  db.py
parsers/: detector.py  gcode.py  sl1.py  ufp.py
parsers/manufacturer/: gcode.py  sl1.py  ufp.py
templates/: add.html  addbulk.html  base.html  edit.html  gcode.html  homepage.html  imgs.html  index.html  main.html  new_job.html  pw.html
templates/base/: admin.html  footer.html  head.html
templates/error/: 404.html
templates/printers/: add.html  edit.html  form.html  index.html
templates/prints/: add.html  edit.html  form.html  index.html
views/: dashboard.py  default.py  printers.py  prints.py
