[tool.poetry]
name = "queue-manager"
version = "0.1.0"
description = ""
authors = [""]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1.2"
flask-login = "^0.5.0"
tinydb = "^4.3.0"
Flask-Bcrypt = "^0.7.1"
Flask-APScheduler = "^1.12.2"
Flask-SQLAlchemy = "^2.5.1"
markupsafe = "2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
